FIX: still testing to fix position of register form on mobile deleted the height

--- a/readersrealm/static/css/style.css
+++ b/readersrealm/static/css/style.css
@@ -105,9 +105,9 @@ footer {
 
 /* FORMS */
 .register-form {
-    height: 80vh;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .login-form {
